--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -8,6 +8,7 @@
                     <div class="row">
                         <div class="col-xs-6 personPhoto"><img class="photo" src="img/avatar.jpg"></div>
                         <div class="col-xs- 6 personName">
+                            <p>{{user.UserName}}</p>
                             <p class="personName_name">Вася</p>
                             <p class="personName_surname">Макарчук</p>
                             <p class="personName_city_year">Копыль, 45 лет</p>
