--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,20 +1,42 @@
-<form class="form-login" role="form">
-    <h2 class="form-login-heading">Login</h2>
-
-
-    <label for="555" class="control-label">Login</label>
-    <input type="text" class="form-control" id="555" data-ng-model="loginData.userName" required autofocus>
-
-
-    <label for="555" class="control-label">Password</label>
-    <input type="password" class="form-control" id="555" data-ng-model="loginData.password" required>
-    <!--<input type="text" class="form-control" placeholder="Username" data-ng-model="loginData.userName" required autofocus>
-    <input type="password" class="form-control" placeholder="Password" data-ng-model="loginData.password" required>-->
-
-    <a href="javascript:void(0)" class="btn btn-raised btn-lg" data-ng-click="login()">OK</a>
-
-    <!--<button class="btn btn-lg btn-info btn-block" type="submit" data-ng-click="login()">Login</button>-->
-    <div data-ng-hide="message == ''" class="alert alert-danger">
-        {{message}}
+<div class="row home_content">
+    <div class="col-xs-2">
+        &nbsp;
     </div>
-</form>
+    <div class="col-xs-8">
+        <div class="row">
+            <div class="col-xs-12 home">
+                <img src="img/logo.png" class="logo">
+            </div>
+            <div class="col-xs-12 ">
+
+                     <form class="form-login" role="form">
+                        
+
+
+                        <label for="555" class="control-label">Login</label>
+                        <input type="text" class="form-control" id="555" data-ng-model="loginData.userName" required autofocus>
+
+
+                        <label for="555" class="control-label">Password</label>
+                        <input type="password" class="form-control" id="555" data-ng-model="loginData.password" required>
+                        
+
+                        <a href="javascript:void(0)" class="btn button_login" data-ng-click="login()">Log In</a>
+
+                        
+                        <div data-ng-hide="message == ''" class="alert alert-danger">
+                            {{message}}
+                        </div>
+                    </form>
+               <!-- <a class="btn button_login" href="#/login" role="button">Login</a>-->
+            </div>
+            <div class="col-xs-12 ">
+                <a class="btn button_signup" href="#/signup" role="button">Sign Up</a>
+            </div>
+        </div>
+    </div>
+    <div class="col-xs-2">
+        &nbsp;
+    </div>
+
+</div>
