added editing profile

--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -1,15 +1,15 @@
     <div class="container mainpage">
             
-            <div  class=" settings"><img src="img/settings.png"></div>
+            <div  class=" settings"><a href="#/editprofile"><img src="img/settings.png"></a></div>
             
                 
             <div class="row">
                 <div class="col-xs-12 personBlock">
                     <div class="row">
                         <div class="col-xs-6 personPhoto"><img class="photo" src="img/avatar.jpg"></div>
-                        <div class="col-xs- 6 personName">
-                            <p class="personName_name">{{user.UserName}}</p>
-                            <p class="personName_surname">Макарчук</p>
+                        <div class="col-xs-6 personName">
+                            <p class="personName_name">{{user.Name}}</p>
+                            <p class="personName_surname">{{user.Surname}}</p>
                             <p class="personName_city_year">Копыль, 45 лет</p>
                         </div>
                     </div>
