--- a/app/templates/editprofile.html
+++ b/app/templates/editprofile.html
@@ -10,12 +10,20 @@
             <form class="form-login" role="form">
                 <h2 class="form-login-heading">Edit profile</h2>
 
+                <div class="form-group">
+                    <label for="exampleInputFile">File input</label>
+                    <input type="file" data-ng-model="profileInfo.ProfileImageUrl" id="exampleInputFile">
+                    <p class="help-block">Example block-level help text here.</p>
+                </div>
+
+
+
                 <label for="555" class="control-label">Name</label>
                 <input type="text" class="form-control" id="555" data-ng-model="profileInfo.Name" placeholder="{{user.Name}}" required autofocus>
                 <label for="555" class="control-label">Surname</label>
                 <input type="text" class="form-control" id="555" data-ng-model="profileInfo.Surname" placeholder="{{user.Surname}}" required>
 
-
+                
 
 
 
