--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -5,7 +5,7 @@
     <div class="col-xs-10">
         <div class="row">
             <div class="col-xs-12 home">
-                <img src="img/logo.png" class="logo">
+                <img src="img/logo.svg" class="logo">
             </div>
             <div class="col-xs-12 ">
 
