--- a/app/templates/articles.html
+++ b/app/templates/articles.html
@@ -1,4 +1,7 @@
-<div id="left_news" class="left_news_class">
+<div data-ng-hide="ready">
+        <img src="img/pre.svg">
+    </div>
+<div data-ng-show="ready" id="left_news" class="left_news_class">
     <div class="container">                
        
 
