buttons subs/unsubs

--- a/app/templates/articles.html
+++ b/app/templates/articles.html
@@ -11,7 +11,7 @@
            <input type="text" class="form-control" id="555" data-ng-model="article.ShortDescription" placeholder="тэги" >
 
 
-            <a href="javascript:void(0)" data-ng-click="sendArticle()" class="btn button_send_article button_border">Отправить</a>
+            <a href="javascript:void(0)" data-ng-click="sendArticle()" class="button_send_article button_border">Отправить</a>
         </div>
 
 
