--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -21,17 +21,17 @@
                         <input type="password" class="form-control" id="555" data-ng-model="loginData.password" required>
                         
 
-                        <a href="javascript:void(0)" class="btn button_login" data-ng-click="login()">Log In</a>
+                        <a href="javascript:void(0)" class="button_login" data-ng-click="login()">Log In</a>
 
                         
                         <div data-ng-hide="message == ''" class="alert alert-danger">
                             {{message}}
                         </div>
                     </form>
-               <!-- <a class="btn button_login" href="#/login" role="button">Login</a>-->
+               <!-- <a class="button_login" href="#/login" role="button">Login</a>-->
             </div>
             <div class="col-xs-12 ">
-                <a class="btn button_signup" href="#/signup" role="button">Sign Up</a>
+                <a class="button_signup" href="#/signup" role="button">Sign Up</a>
             </div>
         </div>
     </div>
