--- a/app/templates/editprofile.html
+++ b/app/templates/editprofile.html
@@ -36,7 +36,7 @@
                 <label for="555" class="control-label">Information</label>
                 <textarea class="form-control" data-ng-model="profileInfo.Information" name="content" placeholder="{{user.Information}}"></textarea>
                 
-                <a href="javascript:void(0)" class="btn button_signup" data-ng-click="editUserProfile()">OK</a>
+                <a href="javascript:void(0)" class="button_signup" data-ng-click="editUserProfile()">OK</a>
 
 
                 
