--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -1,4 +1,4 @@
-    <div data-ng-hide="ready">
+    <div class="preloader" data-ng-hide="ready">
         <img src="img/pre.svg">
     </div>
     <div data-ng-show="ready" class="mainpage">
