added allusers page & search

--- a/app/templates/editprofile.html
+++ b/app/templates/editprofile.html
@@ -10,11 +10,11 @@
             <form class="form-login" role="form">
                 <h2 class="form-login-heading">Edit profile</h2>
 
-                <div class="form-group">
+                <!--<div class="form-group">
                     <label for="exampleInputFile">File input</label>
                     <input type="file" data-ng-model="profileInfo.ProfileImageUrl" id="exampleInputFile">
                     <p class="help-block">Example block-level help text here.</p>
-                </div>
+                </div>-->
 
 
 
