--- a/app/templates/articles.html
+++ b/app/templates/articles.html
@@ -5,10 +5,14 @@
     <div class="container">                
        
 
+        
+
+
+
         <div class="input_new">
            <textarea class="form-control" data-ng-model="article.Text" name="content" placeholder="Что у вас нового?"></textarea>
 
-           <input type="text" class="form-control" id="555" data-ng-model="article.ShortDescription" placeholder="тэги" >
+           <!--<input type="text" class="form-control" id="555" data-ng-model="article.ShortDescription" placeholder="тэги" >-->
 
 
             <a href="javascript:void(0)" data-ng-click="sendArticle()" class="button_send_article button_border">Отправить</a>
