--- a/css/main.css
+++ b/css/main.css
@@ -74,7 +74,11 @@ a:focus{
 
 
 .main_menu{
+  text-align: center;
   box-shadow: 0 0 10px rgba(0,0,0,0.5)
+}
+.main_menu img{
+  width: 25%;
 }
 .header_item{
   text-align: center;
@@ -82,6 +86,10 @@ a:focus{
   padding: 5px 0;
 }
 .button_send_article{
+  text-align: center;
+  padding: 5px;
+  margin-top: 15px;
+  margin-bottom: 15px;
   width: 100%;
 }
 .button_border{
@@ -124,6 +132,10 @@ a:focus{
 }
 .settings{
 	float: right;
+}
+.settings img{
+  text-align: center;
+  width: 70%;
 }
 .afterBlock{
   margin-bottom: 20px; 
@@ -259,3 +271,8 @@ a:focus{
   text-align: center;
   margin: 50% 0;  
 }
+
+.searchUser{
+  margin: 20px 0;
+}
+
